# google-api-cpp-client

./: .gitignore  CMakeLists.txt  README.md  README.txt  doxygen.config  doxygenate.py  introspect.cmake  prepare_dependencies.py
service_apis/: CMakeLists.txt
service_apis/calendar/: CMakeLists.txt  descriptor.json  readme.html
service_apis/calendar/google/calendar_api/: CMakeLists.txt  acl.cc  acl.h  acl_rule.cc  acl_rule.h  calendar.cc  calendar.h  calendar_api.h  calendar_list.cc  calendar_list.h  calendar_list_entry.cc  calendar_list_entry.h  calendar_notification.cc  calendar_notification.h  calendar_service.cc  calendar_service.h  channel.cc  channel.h  color_definition.cc  color_definition.h  colors.cc  colors.h  deep_link_data.cc  deep_link_data.h  display_info.cc  display_info.h  error.cc  error.h  event.cc  event.h  event_attachment.cc  event_attachment.h  event_attendee.cc  event_attendee.h  event_date_time.cc  event_date_time.h  event_habit_instance.cc  event_habit_instance.h  event_reminder.cc  event_reminder.h  (+24 more)
service_apis/drive/: CMakeLists.txt  descriptor.json  readme.html
service_apis/drive/google/drive_api/: CMakeLists.txt  about.cc  about.h  app.cc  app.h  app_list.cc  app_list.h  change.cc  change.h  change_list.cc  change_list.h  channel.cc  channel.h  child_list.cc  child_list.h  child_reference.cc  child_reference.h  comment.cc  comment.h  comment_list.cc  comment_list.h  comment_reply.cc  comment_reply.h  comment_reply_list.cc  comment_reply_list.h  drive_api.h  drive_service.cc  drive_service.h  file.cc  file.h  file_list.cc  file_list.h  generated_ids.cc  generated_ids.h  parent_list.cc  parent_list.h  parent_reference.cc  parent_reference.h  permission.cc  permission.h  (+20 more)
service_apis/storage/: CMakeLists.txt
service_apis/storage/google/storage_api/: CMakeLists.txt  bucket.cc  bucket.h  bucket_access_control.cc  bucket_access_control.h  bucket_access_controls.cc  bucket_access_controls.h  buckets.cc  buckets.h  channel.cc  channel.h  compose_request.cc  compose_request.h  notification.cc  notification.h  notifications.cc  notifications.h  object.cc  object.h  object_access_control.cc  object_access_control.h  object_access_controls.cc  object_access_controls.h  objects.cc  objects.h  policy.cc  policy.h  rewrite_response.cc  rewrite_response.h  service_account.cc  service_account.h  storage_api.h  storage_service.cc  storage_service.h  test_iam_permissions_response.cc  test_iam_permissions_response.h
service_apis/youtube/: CMakeLists.txt  descriptor.json  readme.html
service_apis/youtube/google/youtube_api/: CMakeLists.txt  access_policy.cc  access_policy.h  activity.cc  activity.h  activity_content_details.cc  activity_content_details.h  activity_content_details_bulletin.cc  activity_content_details_bulletin.h  activity_content_details_channel_item.cc  activity_content_details_channel_item.h  activity_content_details_comment.cc  activity_content_details_comment.h  activity_content_details_favorite.cc  activity_content_details_favorite.h  activity_content_details_like.cc  activity_content_details_like.h  activity_content_details_playlist_item.cc  activity_content_details_playlist_item.h  activity_content_details_promoted_item.cc  activity_content_details_promoted_item.h  activity_content_details_recommendation.cc  activity_content_details_recommendation.h  activity_content_details_social.cc  activity_content_details_social.h  activity_content_details_subscription.cc  activity_content_details_subscription.h  activity_content_details_upload.cc  activity_content_details_upload.h  activity_list_response.cc  activity_list_response.h  activity_snippet.cc  activity_snippet.h  caption.cc  caption.h  caption_list_response.cc  caption_list_response.h  caption_snippet.cc  caption_snippet.h  cdn_settings.cc  (+324 more)
src/googleapis/client/: CMakeLists.txt
src/googleapis/client/auth/: credential_store.cc  credential_store.h  file_credential_store.cc  file_credential_store.h  jwt_builder.cc  jwt_builder.h  oauth2_authorization.cc  oauth2_authorization.h  oauth2_pending_authorizations.h  oauth2_service_authorization.cc  oauth2_service_authorization.h  webserver_authorization_getter.cc  webserver_authorization_getter.h
src/googleapis/client/data/: base64_codec.cc  base64_codec.h  codec.cc  codec.h  composite_data_reader.cc  data_reader.cc  data_reader.h  data_writer.cc  data_writer.h  file_data_reader.cc  file_data_writer.cc  file_data_writer.h  inmemory_data_reader.cc  istream_data_reader.cc  jsoncpp_data.cc  jsoncpp_data.h  jsoncpp_data_helpers.h  openssl_codec.cc  openssl_codec.h  serializable_json.cc  serializable_json.h
src/googleapis/client/service/: client_service.cc  client_service.h  media_uploader.cc  media_uploader.h  service_request_pager.cc  service_request_pager.h
src/googleapis/client/transport/: ca_paths.cc  ca_paths.h  curl_http_transport.cc  curl_http_transport.h  html_scribe.cc  html_scribe.h  http_authorization.cc  http_authorization.h  http_request.cc  http_request.h  http_request_batch.cc  http_request_batch.h  http_response.cc  http_response.h  http_scribe.cc  http_scribe.h  http_transport.cc  http_transport.h  http_transport_global_state.cc  http_transport_global_state.h  http_types.h  json_playback_transport.cc  json_playback_transport.h  json_scribe.cc  json_scribe.h  versioninfo.cc  versioninfo.h
src/googleapis/client/util/: abstract_webserver.cc  abstract_webserver.h  date_time.cc  date_time.h  escaping.cc  escaping.h  file_utils.cc  file_utils.h  mongoose_webserver.cc  mongoose_webserver.h  program_path.cc  program_path.h  status.cc  status.h  uri_template.cc  uri_template.h  (+2 more)
src/samples/: CMakeLists.txt  README.md  abstract_gplus_login_flow.cc  abstract_gplus_login_flow.h  abstract_login_flow.cc  abstract_login_flow.h  abstract_webserver_login_flow.cc  abstract_webserver_login_flow.h  calendar_sample_main.cc  command_processor.cc  command_processor.h  command_processor_test.cc  gdriveutil_main.cc  installed_application.cc  installed_application.h  storage_sample_main.cc  webflow_sample_main.cc  youtube_broadcast_main.cc
(+733 files in other folders)
