project (GoogleApis_C++_Samples)

include_directories(${GFLAGS_INCLUDES})
INCLUDE_DIRECTORIES(${GOOGLEAPIS_SERVICE_REPOSITORY_DIR}/calendar)
INCLUDE_DIRECTORIES(${GOOGLEAPIS_SERVICE_REPOSITORY_DIR}/storage)

# This is the basic sample from the tutorial
add_executable(calendar_sample calendar_sample_main.cc)
target_link_libraries(calendar_sample google_calendar_api)
target_link_libraries(calendar_sample googleapis_jsoncpp)
target_link_libraries(calendar_sample googleapis_curl_http)
target_link_libraries(calendar_sample googleapis_http)
target_link_libraries(calendar_sample googleapis_oauth2)
target_link_libraries(calendar_sample googleapis_utils)
if (HAVE_OPENSSL)
target_link_libraries(calendar_sample googleapis_openssl_codec)
endif()
target_link_libraries(calendar_sample ${GFLAGS_LIBRARY})
target_link_libraries(calendar_sample pthread)

add_executable(storage_sample storage_sample_main.cc)
target_link_libraries(storage_sample google_calendar_api)
target_link_libraries(storage_sample google_storage_api)
target_link_libraries(storage_sample googleapis_jsoncpp)
target_link_libraries(storage_sample googleapis_curl_http)
target_link_libraries(storage_sample googleapis_http)
target_link_libraries(storage_sample googleapis_oauth2)
target_link_libraries(storage_sample googleapis_utils)
if (HAVE_OPENSSL)
target_link_libraries(storage_sample googleapis_openssl_codec)
endif()
target_link_libraries(storage_sample ${GFLAGS_LIBRARY})
target_link_libraries(storage_sample pthread)
